// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractDocs 1 function 1`] = `
Array [
  <h2>
    Foo
  </h2>,
  "devdoc",
  <h2>
    foo()
  </h2>,
  "foo.devdoc",
]
`;

exports[`ContractDocs no functions 1`] = `
Array [
  <h2>
    Foo
  </h2>,
  "devdoc",
]
`;

exports[`FunctionDocs basic function 1`] = `
Array [
  <h2>
    foo()
  </h2>,
  "foo.devdoc",
]
`;
